--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,11 +1,11 @@
-name: Java CI with Gradle
+name: Java CI with Gradle and Docker
 
-# main 브랜치에 push 또는 pull request가 발생하면 실행
+# 동작 조건 설정: main 브랜치에 push 또는 pull request가 발생할 경우 실행
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
   pull_request:
-    branches: ["main"]
+    branches: [ "main" ]
 
 permissions:
   contents: read
@@ -13,34 +13,36 @@ permissions:
 jobs:
   build-docker-image:
     runs-on: ubuntu-latest
+
     steps:
-      # 1. 코드 체크아웃
-      - uses: actions/checkout@v3
+    # 1. 코드 체크아웃
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      # 2. Java 17 세팅
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: "17"
-          distribution: "temurin"
+    # 2. Java 17 세팅
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
 
-      # 3. Gradle 빌드 (clean 및 bootJar 실행)
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@af1da67850ed9a4cedd57bfd976089dd991e2582
-        with:
-          arguments: clean bootJar
+    # 3. Gradle로 Spring Boot 애플리케이션 빌드
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: clean bootJar
 
-      # 4. Docker 이미지 빌드 (커밋 SHA를 태그로 사용)
-      - name: docker image build
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo:${{ github.sha }} .
+    # 4. Docker 이미지 빌드
+    - name: Build Docker Image
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo:${{ github.sha }} .
 
-      # 5. Docker Hub 로그인
-      - name: docker login
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    # 5. DockerHub 로그인
+    - name: Docker Hub Login
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      # 6. Docker Hub로 이미지 푸시
-      - name: docker Hub push
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo:${{ github.sha }}
+    # 6. Docker Hub에 이미지 푸시
+    - name: Push Docker Image to Docker Hub
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo:${{ github.sha }}
