--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,9 +3,9 @@ name: Java CI with Gradle and Docker
 # 동작 조건 설정: main 브랜치에 push 또는 pull request가 발생할 경우 실행
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -15,34 +15,62 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. 코드 체크아웃
-    - name: Checkout code
-      uses: actions/checkout@v3
+      # 1. 코드 체크아웃
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    # 2. Java 17 세팅
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      # 2. Java 17 세팅
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: "17"
+          distribution: "temurin"
 
-    # 3. Gradle로 Spring Boot 애플리케이션 빌드
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@v2
-      with:
-        arguments: clean bootJar
+      # 3. Gradle로 Spring Boot 애플리케이션 빌드
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: clean bootJar
 
-    # 4. Docker 이미지 빌드
-    - name: Build Docker Image
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo:${{ github.sha }} .
+      # 4. Docker 이미지 빌드
+      - name: Build Docker Image
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-paykids:${{ github.sha }} .
+          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-paykids:${{ github.sha }} ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-paykids:latest
 
-    # 5. DockerHub 로그인
-    - name: Docker Hub Login
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      # 5. DockerHub 로그인
+      - name: Docker Hub Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    # 6. Docker Hub에 이미지 푸시
-    - name: Push Docker Image to Docker Hub
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo:${{ github.sha }}
+      # 6. Docker Hub에 이미지 푸시
+      - name: Push Docker Image to Docker Hub
+        run: |
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-paykids:${{ github.sha }}
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-paykids:latest
+
+  # 위 과정에서 푸시한 이미지를 ec2에서 풀받아서 실행시키는 과정
+  run-docker-image-on-ec2:
+    # build-docker-image (위)과정이 완료되어야 실행됩니다.
+    needs: build-docker-image
+    runs-on: self-hosted
+
+    steps:
+      # 1. 최신 이미지를 풀받습니다
+      - name: docker pull
+        run: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-paykids
+
+      # 2. 기존의 컨테이너를 중지시킵니다
+      - name: docker stop container
+        run: |
+          sudo docker ps -q --filter "name=github-actions-paykids" | xargs -r sudo docker stop
+
+      # 3. 최신 이미지를 컨테이너화하여 실행시킵니다
+      - name: docker run new container
+        run: sudo docker run --name github-actions-paykids --rm -d -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-paykids
+
+      # 4. 미사용 이미지를 정리합니다
+      - name: delete old docker image
+        run: sudo docker system prune -f
