--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -53,7 +53,7 @@ jobs:
 
   # 위 과정에서 푸시한 이미지를 ec2에서 풀받아서 실행시키는 과정
   run-docker-image-on-ec2:
-    # build-docker-image (위)과정이 완료되어야 실행됩니다.
+    # build-docker-image (위) 과정이 완료되어야 실행됩니다.
     needs: build-docker-image
     runs-on: self-hosted
 
@@ -68,8 +68,13 @@ jobs:
           sudo docker ps -q --filter "name=github-actions-paykids" | xargs -r sudo docker stop
 
       # 3. 최신 이미지를 컨테이너화하여 실행시킵니다
-      - name: docker run new container
-        run: sudo docker run --name github-actions-paykids --rm -d -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-paykids
+      - name: Run Docker Container with Secrets
+        run: |
+          sudo docker run \
+            -e DB_URL=${{ secrets.DB_URL }} \
+            -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
+            -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+            -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-paykids:latest
 
       # 4. 미사용 이미지를 정리합니다
       - name: delete old docker image
