--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -66,6 +66,8 @@ jobs:
       - name: docker stop container
         run: |
           sudo docker ps -q --filter "name=github-actions-paykids" | xargs -r sudo docker stop
+          sudo docker ps -aq --filter "name=github-actions-paykids" | xargs -r sudo docker rm
+
 
       # 3. 최신 이미지를 컨테이너화하여 실행시킵니다
       - name: Run Docker Container with Secrets
