--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -68,6 +68,9 @@ jobs:
           sudo docker ps -q --filter "name=github-actions-paykids" | xargs -r sudo docker stop
           sudo docker ps -aq --filter "name=github-actions-paykids" | xargs -r sudo docker rm
 
+      - name: Check Port 80 Usage
+        run: |
+          sudo netstat -tuln | grep :80 || echo "Port 80 is free."
 
       # 3. 최신 이미지를 컨테이너화하여 실행시킵니다
       - name: Run Docker Container with Secrets
