--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -81,6 +81,11 @@ jobs:
             -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
             -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
             -e GPT_KEY=${{ secrets.GPT_KEY }} \
+            -e AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }} \
+            -e AWS_SECRET_KEY=${{ secrets.AWS_SECRET_KEY }} \
+            -e AWS_REGION=${{ secrets.AWS_REGION }} \
+            -e AWS_S3_BUCKETNAME=${{ secrets.AWS_S3_BUCKETNAME }} \
+            -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
             -p 80:8080 ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-paykids:latest
 
       # 5. 미사용 이미지를 정리합니다
