--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -86,6 +86,7 @@ jobs:
             -e AWS_REGION=${{ secrets.AWS_REGION }} \
             -e AWS_S3_BUCKETNAME=${{ secrets.AWS_S3_BUCKETNAME }} \
             -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
+            -e ADMIN_SECRET_KEY=${{ secrets.ADMIN_SECRET_KEY }} \
             -p 80:8080 ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-paykids:latest
 
       # 5. 미사용 이미지를 정리합니다
