--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,9 @@ admin:
 server:
   address: 0.0.0.0  # 모든 네트워크 인터페이스에서 요청을 수락하도록 설정
   port: 8080       # 포트 설정 (기본값이 8080)
+  tomcat:
+    threads:
+      max: 200
 
 #Swagger
 springdoc:
