--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -94,8 +94,9 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
             cd ~/docker-setup
             docker-compose down -v # 기존 컨테이너 중지 및 삭제
+            docker rmi -f ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-paykids:latest || true
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-paykids:latest  # 최신 Docker 이미지 가져오기
-            docker-compose up -d  # 최신 컨테이너 실행
+            docker-compose up -d --force-recreate  # 최신 컨테이너 실행 (강제 재시작)
           EOF
 
       # 10. 미사용 Docker 컨테이너 및 이미지 정리
